--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <header>
-
+        <h1> Welcome to my friend Website</h1>
     </header>
     <main>
-        <section>
+        <section class="friends">
             <div class="friend">
                 <h3 class="friend-name">Friend-1</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
@@ -34,8 +34,14 @@
                 <h3 class="friend-name">Friend-5</h3>
                 <p>Tenetur, saepe iure. Eos, quam!</p>
             </div>
+
+            <div class="operation">
+                <button id="apply-bg">Apply Background</button>
+            </div>
         </section>
     </main>
+
+    <script src="js/dom.js"></script>
 </body>
 
 </html>
