add new friend by js dynamic

--- a/index.html
+++ b/index.html
@@ -14,29 +14,33 @@
     </header>
     <main>
         <section class="friends">
-            <div class="friend">
-                <h3 class="friend-name">Friend-1</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="friend">
-                <h3 class="friend-name">Friend-2</h3>
-                <p>Excepturi corrupti numquam repellat quod.</p>
-            </div>
-            <div class="friend">
-                <h3 class="friend-name">Friend-3</h3>
-                <p>Sunt exercitationem repudiandae eum? Non.</p>
-            </div>
-            <div class="friend">
-                <h3 class="friend-name">Friend-4</h3>
-                <p>Libero dolor similique mollitia veritatis.</p>
-            </div>
-            <div class="friend">
-                <h3 class="friend-name">Friend-5</h3>
-                <p>Tenetur, saepe iure. Eos, quam!</p>
-            </div>
+            <div id="friend-container">
+                <div id="friend-one" class="friend">
+                    <h3 class="friend-name">Friend-1</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="friend">
+                    <h3 class="friend-name">Friend-2</h3>
+                    <p>Excepturi corrupti numquam repellat quod.</p>
+                </div>
+                <div class="friend">
+                    <h3 class="friend-name">Friend-3</h3>
+                    <p>Sunt exercitationem repudiandae eum? Non.</p>
+                </div>
+                <div class="friend">
+                    <h3 class="friend-name">Friend-4</h3>
+                    <p>Libero dolor similique mollitia veritatis.</p>
+                </div>
+                <div class="friend">
+                    <h3 class="friend-name">Friend-5</h3>
+                    <p>Tenetur, saepe iure. Eos, quam!</p>
+                </div>
 
+            </div>
             <div class="operation">
                 <button id="apply-bg">Apply Background</button>
+                <button id="do-center">Do Center</button>
+                <button id="add-friend">Add New Friend</button>
             </div>
         </section>
     </main>
